--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
     font-size:22px;
     background:pink;
     border: 1px solid red;
-    margin-bottom:10px;
+    /*margin-bottom:10px;*/
 }
 
 #holst{
@@ -22,3 +22,9 @@
     /* background-image: url("../images/space.jpg");*/
 }
 
+#control{
+    background: #1e90ff;
+    margin-top:3px;
+    margin-bottom:3px;
+    padding:10px;
+}
